# terra-rs

./: .gitignore  .gitmodules  .rustfmt.toml  177.bundle.js  266.bundle.js  532.bundle.js  547.bundle.js  602.bundle.js  647.bundle.js  763.bundle.js  936.bundle.js  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  crates_wasm_pkg_terra-wasm_js.bundle.js  docker-compose.build.yml  index.html  index.js  index.mjs  main.bundle.js  mise.toml  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml  rust_pkg_terra-wasm_js.bundle.js  rust_pkg_terra-wasm_js.index.js  rust_pkg_terra_js.index.js  src_input_json.bundle.js  src_world_json.bundle.js  terra.toml  tsconfig.json  vendors-babylonjs.app.bundle.js  vendors.app.bundle.js  webpack.config.js
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  test-deploy.yml  test.yml
blender/: hexagon.blend
crates/3d/: Cargo.toml
crates/3d/assets/worlds/: medium.terra.json
crates/3d/src/: camera.rs  main.rs  ui.rs  world.rs
crates/3d/src/ui/: diagnostics.rs  mod.rs  render.rs  world.rs
crates/3d/src/world/: event.rs  mesh.rs  message.rs  mod.rs  storage.rs
crates/cli/: Cargo.toml  Makefile.toml  small.json
crates/cli/configs/: blog.toml  large.toml  medium.toml  print.toml  rounded.toml  small.toml  zero.toml
crates/cli/src/: main.rs  stl.rs  svg.rs
crates/core/: Cargo.toml
crates/core/benches/: world_gen.rs
crates/core/src/: config.rs  lib.rs  util.rs  world.rs
crates/core/src/config/: mod.rs  seed.rs
crates/core/src/js/: mod.rs  util.rs
crates/core/src/render/: config.rs  mod.rs  stl.rs  svg.rs  unit.rs
crates/core/src/util/: mod.rs  range.rs  render.rs  stl.rs  svg.rs  unit.rs
crates/core/src/world/: hex.rs  mod.rs  tile.rs
crates/core/src/world/generate/: biome.rs  elevation.rs  lake.rs  mod.rs  noise.rs  ocean.rs  rainfall.rs  runoff.rs  water_feature.rs  wind.rs
crates/core/src/world/generate/runoff/: basin.rs  mod.rs  pattern.rs
crates/core/src/world/hex/: data_structure.rs  mod.rs  unit.rs
crates/core/tests/: config_validation.rs  test_config_validation.rs  test_world_gen.rs  world_gen.rs
crates/native/: Cargo.toml
crates/native/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  util.rs
demo/: .eslintignore  .eslintrc.js  favicon.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
demo/public/: index.html
demo/src/: config.ts  index.css  index.tsx  theme.ts  util.ts
demo/src/3d/: InputHandler.ts  TileMeshHandler.ts  WorldDemo.ts  WorldRenderManager.ts  WorldRenderer.ts  WorldScene.ts
demo/src/components/: App.tsx  HelpTooltip.tsx  NotFound.tsx  PageLayout.tsx  UnstyledLink.tsx
demo/src/components/demo/: ConfigEditor.tsx  ConfigEditorOverlay.tsx  ConfigInput.tsx  ConfigSection.tsx  Demo.tsx  DownloadMenu.tsx  ErrorState.tsx  ImportConfigButton.tsx  RangeConfigInput.tsx  SelectConfigInput.tsx  WorldCanvas.tsx  WorldCanvasWrapper.tsx  descriptions.tsx
demo/src/components/demo/config/: CheckboxConfigInput.tsx  ConfigEditor.tsx  ConfigEditorContext.ts  ConfigInput.tsx  ConfigJsonEditor.tsx  ConfigSection.tsx  ImportConfigButton.tsx  RangeConfigInput.tsx  RenderConfigEditor.tsx  TextConfigInput.tsx  WorldConfigEditor.tsx  descriptions.tsx
demo/src/context/: DemoContext.ts
demo/src/hooks/: useConfigHandler.ts  useDebouncedValue.ts  useQueryParams.ts  useStaticValue.ts
dom/: index.ts
rust/: Cargo.toml
rust/src/: camera.rs  config.rs  input.rs  lib.rs  render.rs  terra.json  util.rs
rust/src/world/: cluster.rs  hex.rs  mod.rs  tile.rs  unit.rs
rust/src/world/generate/: beach.rs  biome.rs  elevation.rs  humidity.rs  lake.rs  mod.rs  ocean.rs  rainfall.rs  runoff.rs  wind.rs
rust/src/world/generate/runoff/: basin.rs  mod.rs
scripts/: plot.py
src/: camera.rs  config.rs  input.rs  lib.rs  main.rs  render.rs  terra.json  util.rs
src/render/: mod.rs
src/shaders/: frag.glsl  simple-fs.glsl  simple-vs.glsl  vertex.glsl
src/world/: config.rs  mod.rs
src/world/generate/: biome.rs  elevation.rs  humidity.rs  mod.rs
static/: index.html  terra.json
typescript/: .eslintignore  .eslintrc.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
typescript/src/: InputHandler.ts  WorldRenderer.ts  index.ts  input.json  input.ts  terra.json  util.ts  wasm  world.json
typescript/src/world/: InputHandler.ts  PauseMenu.ts  WorldRenderer.ts  WorldScene.ts
typescript/static/: index.html  styles.css
typescript/static/gui/: pause.xml
unity/: .gitignore
unity/Assets/Materials/: Alpine.mat  Coast.mat  Desert.mat  Forest.mat  Jungle.mat  Ocean.mat  Plains.mat  Snow.mat
unity/Assets/Prefabs/Tiles/: Alpine Tile.prefab  Coast Tile.prefab  Desert TIle.prefab  Forest Tile.prefab  Jungle Tile.prefab  Ocean Tile.prefab  Plains Tile.prefab  Snow Variant.prefab  Tile.prefab
unity/Assets/Scenes/: WorldScene.unity
unity/Assets/Scripts/: CameraController.cs
unity/Assets/Scripts/Editor/: WorldEditor.cs
unity/Assets/Scripts/World/: TileController.cs  TilePrefabs.cs  World.cs  WorldController.cs
unity/Assets/Worlds/: large.toml  medium.toml  small.toml
unity/ProjectSettings/: ProjectSettings.asset
