[workspace]
members = [
  "crates/*",
] 
resolver = "2" # Needed for bevy/wgpu stuff

# wasm-pack-plugin doesn't allow us to set the mode to 'profiling', so we have
# to turn dev into profiling (optimized, but with debug symbols). Techincally
# this is only needed for wasm, but we have no way to make this target-specific
# so we just have to set it for everyone
# https://github.com/wasm-tool/wasm-pack-plugin/issues/86
[profile.dev.package.terra]
opt-level = 3

# https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3
