[workspace]
members = ["crates/*"]
resolver = "2"         # Needed for bevy/wgpu stuff

[workspace.package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2021"
homepage = "https://terra.lucaspickering.me"
license = "MIT"
repository = "https://github.com/LucasPickering/terra-rs"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
serde = {version = "1.0", default-features = false}
serde_json = "1.0"
strum = "0.20"
terra = {path = "./crates/core"}

# wasm-pack-plugin doesn't allow us to set the mode to 'profiling', so we have
# to turn dev into profiling (optimized, but with debug symbols). Techincally
# this is only needed for wasm, but we have no way to make this target-specific
# so we just have to set it for everyone
# https://github.com/wasm-tool/wasm-pack-plugin/issues/86
[profile.dev.package.terra]
opt-level = 3

# https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3
