[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "3D terrain generation"
edition = "2018"
license = "MIT"
name = "terra"
repository = "https://github.com/LucasPickering/terra-rs"
version = "0.1.0"

[package.metadata.wasm-pack.profile.profiling]
# workaround to get debug info in
wasm-opt = ['-O4', '-g']

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cgmath = "0.17"
console_error_panic_hook = "0.1"
derive_more = "0.99"
log = "0.4"
luminance = "0.43"
luminance-front = "0.3"
luminance-web-sys = "0.2"
noise = "0.6"
rand = "0.7"
rand_pcg = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.1"
serde_json = "1.0"
strum = {version = "0.20", features = ["derive"]}
wasm-bindgen = {version = "0.2"}
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
features = [
  "EventListener",
  "KeyboardEvent",
  "Performance",
  "Window",
]
version = "0.3.40"
