[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "3D terrain generation"
edition = "2018"
license = "MIT"
name = "terra"
repository = "https://github.com/LucasPickering/terra-rs"
version = "0.1.0"
[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4', '-g']

# wasm-pack-plugin doesn't allow us to set the mode to 'profiling', so we have
# to turn dev into profiling (optimized, but with debug symbols)
# https://github.com/wasm-tool/wasm-pack-plugin/issues/86
[profile.dev]
# opt-level = 3
opt-level = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
derive_more = "0.99"
fnv = "1.0"
getrandom = {version = "*", features = ["js"]}
indexmap = "1.6"
js-sys = "0.3"
log = "0.4"
noise = {version = "0.6", default-features = false}
rand = "0.8"
rand_pcg = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.1"
strum = {version = "0.20", features = ["derive"]}
wasm-bindgen = {version = "0.2"}
wasm-logger = "0.2"

[dependencies.web-sys]
features = [
  "console",
]
version = "0.3.40"
