[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "3D rendering for Terra worlds"
edition = "2021"
license = "MIT"
name = "terra-3d"
repository = "https://github.com/LucasPickering/terra-rs"
version = "0.1.0"

[dependencies]
bevy = {version = "0.9.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "dynamic", # Warning - does not work with wasm!!
  "render",
  "x11",
]}
bevy_egui = {version = "0.18.0", default-features = false, features = ["default_fonts"]}
serde_json = "^1.0.91"
terra = {path = "../core", features = ["bevy"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
