[package]
authors = {workspace = true}
description = "3D rendering for Terra worlds"
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "terra-3d"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
bevy = {version = "0.9.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "x11",
]}
bevy_egui = {version = "0.18.0", default-features = false, features = [
  "default_fonts",
]}
serde_json = {workspace = true}
terra = {workspace = true, features = ["bevy"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
