[package]
authors = {workspace = true}
description = "3D rendering for Terra worlds"
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "terra-3d"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
bevy = {version = "0.18", default-features = false, features = [
  "3d",
  "bevy_asset",
  "bevy_winit",
  "x11",
]}
bevy_egui = {version = "0.39", default-features = false, features = [
  "default_fonts",
  "render",
]}
serde_json = {workspace = true}
terra = {workspace = true, features = ["bevy"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
terra = {workspace = true, features = ["bevy", "js"]}
