[package]
authors = {workspace = true}
description = "Command line interface for Terra 3D terrain generation"
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "terra-cli"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[[bin]]
name = "terra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
config = {version = "0.10", default-features = false, features = [
  "json",
  "toml",
]}
log = "*"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
simple_logger = "4.0"
structopt = "0.3"
strum = {workspace = true}
terra = {workspace = true, features = ["bin", "json", "svg", "stl"]}
toml = "*"
