[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "3D terrain generation"
edition = "2021"
license = "MIT"
name = "terra"
repository = "https://github.com/LucasPickering/terra-rs"
version = "0.1.0"

[features]
bevy = ["dep:bevy_ecs"]
bin = ["dep:serde_cbor"]
json = ["dep:serde_json"]
stl = ["dep:stl_io"]
svg = ["dep:svg"]

[dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
bevy_ecs = {version = "0.9", optional = true, default-features = false}
derive_more = "0.99"
fnv = "1.0"
indexmap = "1.6"
log = "0.4"
nalgebra = {version = "0.27", default-features = false, features = ["std"]}
noise = {version = "0.6", default-features = false}
rand = "0.8"
rand_pcg = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = {version = "0.11", optional = true}
serde_json = {version = "1.0", optional = true}
stl_io = {version = "0.6", optional = true}
strum = {version = "0.20", features = ["derive"]}
svg = {version = "0.8", optional = true}
validator = {version = "0.12", default-features = false, features = ["derive"]}

[dev-dependencies]
serde_test = "1.0"

# wasm-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "*", features = ["js"]}
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["console"]}
