[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Native C bindings for the Terra core crate"
edition = "2018"
license = "MIT"
name = "terra-native"
repository = "https://github.com/LucasPickering/terra-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
terra = {path = "../core"}
